# abignumscalc

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  client.cpp  client.h  client_main.cpp  data_nums.txt  main.cpp  serializer.cpp  serializer.h  server.cpp  server.h  server_main.cpp  servertest.cpp  tests.cpp
scripts/: generate.bat
